--- a/CUSHION.html
+++ b/CUSHION.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
+    <title>CUSHION</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">About Beauty</div>
+    <div class="address-bar">| Web592group22 |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,22 +47,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.php">About Beauty</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home</a>
+                   <li>
+                        <a href="index.php">HOME</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="EYE SHADOW.html">EYE SHADOW</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="BLUSH.html">BLUSH</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="LIP.html">LIP</a>
+                    </li>
+					<li>
+                        <a href="CUSHION.html">CUSHION </a>
                     </li>
                 </ul>
             </div>
