--- a/CUSHION.html
+++ b/CUSHION.html
@@ -81,13 +81,13 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Company
-                        <strong>CUSHION</strong>
+                        <strong>blog</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>CUSHION
+                    <h2>Post Title
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
