--- a/EYE SHADOW.html
+++ b/EYE SHADOW.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>EYE SHADOW</title>
+    <title>About - Business Casual - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">About Beauty</div>
-    <div class="address-bar">| Web592group22 |</div>
+    <div class="address-bar">Eyeshadow</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,25 +47,22 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.php">About Beauty</a>
+                <a class="navbar-brand" href="index.html">Business Casual</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.php">HOME</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="EYE SHADOW.html">EYE SHADOW</a>
+                        <a href="about.html">Eyeshadow</a>
                     </li>
                     <li>
-                        <a href="BLUSH.html">BLUSH</a>
+                        <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="LIP.html">LIP</a>
-                    </li>
-					<li>
-                        <a href="CUSHION.html">CUSHION </a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +78,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                        <strong>EYE SHADOW</strong>
                     </h2>
                     <hr>
                 </div>
@@ -89,9 +86,9 @@
                     <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>อายแชโดว์ คือ เครื่องสำอางค์ที่ใช้ปัดทาบนเปลือกตาใต้คิ้ว เพื่อให้เกิดมิติความลึกของตาในแต่ละข้าง นอกจากนั้นแล้วยังทำให้ดูแล้วเด่น มีเสน่ห์อีกด้วย อายแชโดว์ มีหลายชนิด และมีสีสันต่างๆ มากมาย</p>
+                    <p>หลายคนใช้อายแชโดว์เพื่อเพิ่มจุดเด่นให้กับดวงตาของแต่ละบุคคล และเป็นที่นิยมใช้ในโรงละคร การแสดง การละเล่นอื่น ๆ </p>
+                    <p>เพื่อสร้างลักษณะที่น่าจดจำ โดดเด่น มีสีสดใส หรือทำให้เกิดอารมณ์ต่างๆ เช่น เศร้าหมอง ของตัวละครได้  ทั้งนี้ขึ้นอยู่กับโทนสีผิวและประสบการณ์ของผู้แต่งหน้า ผลจากเงาของตาช่วยเพิ่มมิติ มักจะออกมาเย้ายวนใจ และเพิ่มความสนใจได้มากขึ้น</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -101,27 +98,98 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">EYE SHADOW    
                     </h2>
                     <hr>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+			<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121009_shimmer_rock(0)_en.jpg" alt="">
+                    <h3>3CE EYE SHADOW<br>
+                        <small>#ROCK STAR.<br></small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_cho(0)_en.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+					<small>#chocolate factory.</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_glow(0)_en.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+                        <small>#Goldn glow.</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_mad(0)_en.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+                        <small>#madonna.</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_str(0)_en.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+                        <small>#street lamp.</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_vin(0)_en.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+                        <small>#vintage khaki</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/3ce1/121029_luster_4.jpg" alt="">
+                    <h3>3CE SHADOW<br>
+                        <small>#honeymoon</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/3ce1/130108_shimmer_SATURN(0)_en.jpg" alt="">
+                    <h3>3CE MOOD RECIPE TRIPLE SHADOW <br>
+                        <small>#SWOON</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/3ce1/130108_shimmer_URANUS(0)_en.jpg" alt="">
+                    <h3>3CE ONE COLOR SHADOW<br>
+                        <small>#NOTORIOUS PLUM</small>
+                    </h3>
+                </div>
+              		 <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://en.stylenanda.com/web/product/medium/201606/210534_shop1_929367.jpg" alt="">
+                    <h3>3CE POT EYE SHADOW<br>
+                        <small>#HOLY CHIC</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://en.stylenanda.com/web/product/medium/201606/210536_shop1_439849.jpg" alt="">
+                    <h3>3CE POT EYE SHADOW<br>
+                        <small>#BABY DOLL</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://en.stylenanda.com/web/product/medium/201608/212133_shop1_941397.jpg" alt="">
+                    <h3>3CE ONE COLOR SHADOW<br>
+                        <small>#PINK JUNGLE</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://en.stylenanda.com/web/product/medium/201606/210535_shop1_417598.jpg" alt="">
+                    <h3>3CE POT EYE SHADOW<br>
+                        <small>#DELIGHTFUL</small>
+                    </h3>
+                </div>
+				 <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://en.stylenanda.com/web/product/medium/201608/212136_shop1_478763.jpg" alt="">
+                    <h3>3CE ONE COLOR SHADOW<br>
+                        <small>#TANGERINE STAIN</small>
+                    </h3>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://file2.stylenanda.com/web/3ce1/160802-lime(18).jpg" alt="">
+                    <h3>3CE ONE COLOR SHADOW<br>
+                        <small>#JULY LIME</small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
