--- a/EYE SHADOW.html
+++ b/EYE SHADOW.html
@@ -117,7 +117,7 @@
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://file2.stylenanda.com/web/upload1/121029_luster_glow(0)_en.jpg" alt="">
                     <h3>3CE SHADOW<br>
-                        <small>#Goldn glow.</small>
+                        <small>#Goldn glow</small>
                     </h3>
                 </div>
 				<div class="col-sm-4 text-center">
